--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@konforti/react-truncate": "^1.1.0",
     "axios": "^0.19.0",
     "bulma": "^0.7.5",
     "bulma-extensions": "^6.2.7",
