--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-slick": "^0.24.0"
   },
   "scripts": {
     "start": "react-scripts start",
