--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@konforti/react-truncate": "^1.1.0",
+    "antd": "^3.20.1",
     "axios": "^0.19.0",
     "bulma": "^0.7.5",
     "bulma-extensions": "^6.2.7",
