--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "bravoure",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://amiejah.github.io/bravoure/",
   "dependencies": {
     "@konforti/react-truncate": "^1.1.0",
     "antd": "^3.20.1",
     "axios": "^0.19.0",
     "bulma": "^0.7.5",
     "bulma-extensions": "^6.2.7",
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.12.0",
     "node-sass-chokidar": "^1.3.5",
     "npm-run-all": "^4.1.5",
@@ -19,6 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
